--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "parcel": "^2.7.0"
   },
   "dependencies": {
+    "@xmldom/xmldom": "^0.8.3",
     "axios": "^0.27.2",
     "commander": "^9.4.0",
     "epitelete": "^0.2.6",
@@ -43,6 +44,7 @@
     "pipeline-handler": "^1.1.0",
     "proskomma": "^0.7.15",
     "proskomma-json-tools": "^0.5.6",
+    "proskomma-utils": "^0.8.2",
     "uw-proskomma": "^0.8.5"
   }
 }
